# ChangeLog for www-apache/mod_security
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/mod_security/ChangeLog,v 1.72 2012/04/01 15:39:12 armin76 Exp $

  01 Apr 2012; Raúl Porcel <armin76@gentoo.org> mod_security-2.6.3.ebuild:
  sparc stable wrt #409199

  26 Mar 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.5.12.ebuild:
  Remove ancient version.

  25 Mar 2012; Brent Baude <ranger@gentoo.org> mod_security-2.6.3.ebuild:
  Marking mod_security-2.6.3 ppc for bug 409199

  24 Mar 2012; Markos Chandras <hwoarang@gentoo.org> mod_security-2.6.3.ebuild:
  Stable on amd64 wrt bug #409199

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  mod_security-2.6.3.ebuild:
  x86 stable wrt bug #409199

*mod_security-2.6.5 (21 Mar 2012)

  21 Mar 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.5.ebuild, -mod_security-2.6.2.ebuild,
  -mod_security-2.6.4.ebuild:
  Version bump; remove old.

*mod_security-2.6.4 (09 Mar 2012)

  09 Mar 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.4.ebuild, -mod_security-2.6.4_rc1.ebuild:
  Version bump.

*mod_security-2.6.4_rc1 (23 Feb 2012)

  23 Feb 2012; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.4_rc1.ebuild:
  Version bump to new release candidate.

*mod_security-2.6.3 (27 Dec 2011)

  27 Dec 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  +mod_security-2.6.3.ebuild:
  Version bump.

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> mod_security-2.6.1.ebuild:
  sparc stable wrt #383315

*mod_security-2.6.2 (02 Oct 2011)

  02 Oct 2011; Diego E. Pettenò <flameeyes@gentoo.org>
  -mod_security-2.6.2_rc1.ebuild, +mod_security-2.6.2.ebuild:
  Version bump.

  20 Sep 2011; Andreas Schuerch <nativemad@gentoo.org>
  mod_security-2.6.1.ebuild:
  x86 stable, see bug 383315

  20 Sep 2011; Tony Vroon <chainsaw@gentoo.org> mod_security-2.6.1.ebuild: