@@ -4,18 +4,20 @@ Hash: SHA1
 AUX 2.5.10/99_mod_security.conf 457 RMD160 8f0e24cdfa7a71487365b42fd194a87e5ce426a8 SHA1 2d3cf537fb777dca964a40de2f512245bf390641 SHA256 541fbaa2f62f501190cfef67bb760f2c4ef7aef7d260a544b3d8886aca6aea2d
 AUX mod_security-2.5.10-as-needed.patch 1169 RMD160 56ea5b1de8673556a0cfff3db606824ccb092e92 SHA1 1417de57c5e3bce8bab6f37f6ef532be44140c6c SHA256 aa1086c66d10b40d4ae184dad1bf9fc18e2fc8c6c3474ad2537b1728a01bd8be
 AUX modsecurity.conf 276 RMD160 b8b303a210d05770d307ee60bfcf1400ec83d968 SHA1 35badbac9fe301c18cdda5abacf578e81f36d607 SHA256 00b6f23a10c142828fafeb0362f23846f95ce5d2129a7a3c053dc20554bd078a
-DIST modsecurity-apache_2.6.1.tar.gz 1161076 RMD160 9740690b772bf9e78dbf84a7eb3bdc0a042872a5 SHA1 dcd88621dfcc9d8607ca33d3c745a2cf671fc606 SHA256 e2e7d939f22ec05c0d17defd462724e181bfe947c5689b76cf88f96e8e423096
 DIST modsecurity-apache_2.6.3.tar.gz 780896 RMD160 102ce304bda05e6d0fd83ebeba27a88b5e0388fe SHA1 d21b8eab268f2614204323720159f7dfe3d9a205 SHA256 6ae9339623e582c965e6a188f7f61f540402a5af8c37cc7a8d22daa4565ca71b
-DIST modsecurity-apache_2.6.5.tar.gz 781626 RMD160 e5df3c4915f08e902def1645dd18b21b78f21a94 SHA1 30f8363adee0684a8b63d6ca7abf5fd29a794f88 SHA256 5bc57fe42825e87fbccab1d88ba5480eaba32c5a166802ac7aa6daae19b44e5f
-EBUILD mod_security-2.6.1.ebuild 2472 RMD160 1c9edf05ad07ed1d2146601a51f56ad40b67fc2c SHA1 898a513ff629234aa5c44582129d3f703becb360 SHA256 6c1de519734bfc296bbcc5a2cda16ffd511f2a9ca9ff1be425fb142159746912
-EBUILD mod_security-2.6.3.ebuild 2471 RMD160 e4a1ae548e0dbe3166c0735aa7b088c382ae7fbd SHA1 1a4a1e809f6c1d8f2110a094d065998de2f2154d SHA256 4402d528e3bdd6e73c8b5c7d5e5b4fec819d36996e6955a873cac1d816f16542
-EBUILD mod_security-2.6.5.ebuild 2477 RMD160 a9e50a4f4d4aaf07ae8f1404a6d639ff284620a4 SHA1 89738086cd0bf1d06de2ac657518e6df6eeaa8b3 SHA256 74f5a1c2a55d951ab41b65fb9437ee47faf9c9b006b3bd1fbf748861521c510f
-MISC ChangeLog 17272 RMD160 d825a78e40ce4403e9e454156fddf541a5e0804b SHA1 9ea74b86a478fb98cbbe21fbc4cc67b2bfc57db2 SHA256 40224c637e94bfa0d8c8bea573901b4916dd7947ad8f0114bebe90e3bdb0fc29
+DIST modsecurity-apache_2.6.6.tar.gz 781984 RMD160 ac27b5d2da5a3b90b97714914592a8f7c3828b26 SHA1 18f3eba967d60abfe117e0e7866b68f763da711f SHA256 a0cb075d5898230d17da5805eb102d1bbba07fe0748dcc32920990c4711b7708
+EBUILD mod_security-2.6.3.ebuild 2493 RMD160 c01c5f1a78f2af14a5b8fdbe006d19294b1d56eb SHA1 e02bf7c58f6519e5d484573e78d0667356807504 SHA256 228a802db34c1b50f0218003c7e97e886ad096cff3e3cd23a6803e8d4ccbedfc
+EBUILD mod_security-2.6.6.ebuild 2453 RMD160 6bbbb22d6f0a57d5b4616f13e5a1ec083705284e SHA1 f8d9395c8f9c51bae9a4eb313515b7ebbc6ed199 SHA256 32223a0beb93df46149df04a428a2f3400022fce5f38772cb0d3cb8f02ab860b
+MISC ChangeLog 17617 RMD160 e6b66570439a552612fe6d7136590f216193f8e6 SHA1 57be9058f8ccf8945b2affa5faf9e958521e5136 SHA256 b6eaf32dc61c198fdf14a459680915fb04c83bdcea4a75c8969e7b2f0a4fa20f
 MISC metadata.xml 1314 RMD160 a5ef1462d8c1f9c3526d7eebd328f5aec6ac5396 SHA1 6047ee181f17636836d44bb8f907a3a4cd5448c7 SHA256 d9e91ba25184276208c7c8e5c6e513d0204c77c247d56c9627bd38f117539e0c
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAk94dqYACgkQuQc30/atMkBVUgCgwXJADpRZGSAuxR6oLmM9zd+/
-4wwAmwUOAYCSviurCIFtIed/Qvtk5KbW
-=PFOl
+iQEcBAEBAgAGBQJP3MPUAAoJEBzRPIrUMBNCesMH/iMCHJWaZwTC+ufKW9SEaCG8
+4Nu4/hUWGQVPkh9f0tTG9PASiZTSa7gy//B+eMMVJfZbhTvhShbJIyvkpDFpOJmv
+LqC43mGsbUrKOw4D7fA1XB1UE9Lkb9t9zIpERpmO/+6AxzVS0ZpKBfzCWo0QnU9O
+s5z5s48ZK3FMaOx1E89het8jVcxyf9qy5Y/23cLVEwQoQ9kkMg+jV1b4RvJnNfqW
+lE8pxbxPueOS+QggACMsyDJzutwwk6GWltEY6AqB7FexE+9b0qbgAZMYhrHdzoDO
+bZ3VAeBlocaYsZkAL2vDQ1//Z55T5+v+5nz5lu+/YNheN9JQ9R/OvnwCjuIa/+g=
+=LeAK
 -----END PGP SIGNATURE-----
